Ajustando htmls e inspeção de computadores

--- a/equipamentos/templates/detalhes_computador.html
+++ b/equipamentos/templates/detalhes_computador.html
@@ -109,7 +109,7 @@
         {% if computador.nf_computador %}
             <div class="col-md-6 mb-3">
                 <h5>Nota Fiscal Computador:</h5>
-                <a target"_blank" href="{{ computador.nf_computador.url }}">Baixar Nota Fiscal Computador</a>
+                <a href="{{ computador.nf_computador.url }}" target="_blank">Baixar Nota Fiscal Computador</a>
             </div>
         {% endif %}
 
@@ -123,7 +123,7 @@
         {% if computador.nf_sistema_operacional %}
             <div class="col-md-6 mb-3">
                 <h5>Nota Fiscal Sistema Operacional:</h5>
-                <a target="_blank" href="{{ computador.nf_sistema_operacional.url }}">Baixar Nota Fiscal Sistema Operacional</a>
+                <a href="{{ computador.nf_sistema_operacional.url }}" target="_blank">Baixar Nota Fiscal Sistema Operacional</a>
             </div>
         {% endif %}
 
