Adicionado ocorrencia de Adicionar Software em Um Computador

--- a/ocorrencias/templates/ocorrencias_equipamentos.html
+++ b/ocorrencias/templates/ocorrencias_equipamentos.html
@@ -12,17 +12,18 @@
         <h1 class="h1">Ocorrências de Equipamentos</h1>
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="{% url "inativar_computador" %}">Inativar Computador</a>
+                <a href="{% url "inativar_computador" %}">1. Inativar Computador</a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-            <a href="{% url "trocar_computador_operador" %}">Trocar Operador de um Computador</a>    
+            <a href="{% url "trocar_computador_operador" %}">2. Trocar Operador de um Computador</a>    
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <a href="#">Recolher computador para setor da TI</a>    
-            </li>
+              <a href="{% url "adicionar_software_em_um_computador" %}">3. Adicionar Novo Software em um Computador</a>    
+            </li>            
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <a href="#">Realizar inspeção</a>    
+              <a href="#">4. Nome</a>    
             </li>
+
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <a href="#"></a>    
           </li>
