Adicionado Ocorrencia de Atualizar nome de Máquina

--- a/ocorrencias/templates/ocorrencias_equipamentos.html
+++ b/ocorrencias/templates/ocorrencias_equipamentos.html
@@ -21,7 +21,7 @@
               <a href="{% url "adicionar_software_em_um_computador" %}">3. Adicionar Novo Software em um Computador</a>    
             </li>            
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <a href="#">4. Nome</a>    
+              <a href="{% url "atualizar_nome_maquina" %}">4. Atualizar Nome do Computador</a>    
             </li>
 
             <li class="list-group-item d-flex justify-content-between align-items-center">
