--- a/equipamentos/templates/listar_sistemas_operacionais.html
+++ b/equipamentos/templates/listar_sistemas_operacionais.html
@@ -27,6 +27,7 @@
                   <tr>
                       <th scope="col">ID</th>
                       <th scope="col">Nome do Sistema Operacional</th>
+                      <th scope="col">Quantidade</th>                      
                   </tr>
               </thead>
               <tbody>
@@ -34,6 +35,7 @@
                       <tr>
                           <td>{{ so.id }}</td>
                           <td>{{ so.nome_sistema_operacional }}</td>
+                          <td>{{ so.quantidade}}</td>
                       </tr>
                   {% endfor %}
               </tbody>
