--- a/equipamentos/templates/listar_softwares.html
+++ b/equipamentos/templates/listar_softwares.html
@@ -28,6 +28,7 @@
                 <tr>
                     <th scope="col">ID</th>
                     <th scope="col">Nome do Software</th>
+                    <th scope="col">Quantidade</th>                    
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +36,7 @@
                     <tr>
                         <td>{{ software.id }}</td>
                         <td>{{ software.nome_software }}</td>
+                        <td>{{ software.quantidade }}</td>                        
                     </tr>
                 {% endfor %}
             </tbody>
