Finalizando ajustes nas ocorrencias de operadores

--- a/ocorrencias/templates/atualizar_setor_operador.html
+++ b/ocorrencias/templates/atualizar_setor_operador.html
@@ -28,7 +28,7 @@
                 <br>
                 <select name="operador" class="form-control">
                     {% for operador in operadores %}
-                        <option value="{{ operador.id }}">{{ operador.nome_operador }}</option>
+                        <option value="{{ operador.id }}">{{ operador.nome_operador }} - {{ operador.setor }}</option>
                     {% endfor %}
                 </select>
                 <!--
