--- a/ocorrencias/templates/ocorrencias_operadores.html
+++ b/ocorrencias/templates/ocorrencias_operadores.html
@@ -12,10 +12,10 @@
         <h1 class="h1">Ocorrência de Operadores</h1>
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="{% url "inativar_operador" %}">Inativar Operador</a>
+                <a href="{% url "inativar_operador" %}">1. Inativar Operador</a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="{% url "atualizar_setor_operador" %}">Atualizar Setor de Operador</a>    
+                <a href="{% url "atualizar_setor_operador" %}">2. Atualizar Setor de Operador</a>    
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="#"></a>    
