--- a/empresa/templates/listar_setores.html
+++ b/empresa/templates/listar_setores.html
@@ -8,9 +8,15 @@
 {% include "partials/barra_navegacao.html" %}
 
 <div class="container my-5">
-    <div class="d-flex align-items-center">
-        <h2 class="mr-3">Setores</h2>
-        <a href="{% url 'cadastrar_setor' %}" class="btn btn-outline-success">Cadastrar</a>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex align-items-center">
+            <h2 class="mr-3">Operadores</h2>
+            <a href="{% url 'cadastrar_setor' %}" class="btn btn-outline-success">Cadastrar</a>
+        </div>
+        <form class="form-inline" method="GET" action="{% url 'buscar_setores' %}">
+            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar..." aria-label="Pesquisar" name="q" value="{{ request.GET.q }}">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
     </div>
     {% if messages %}
         {% for message in messages %}
